--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
     "styled-components": "^1.4.6",
     "uuid": "^3.0.1"
   },
