--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-test-utils": "^0.3.0",
+    "graphql-tag": "^2.0.0",
+    "graphql-tools": "^0.11.0",
     "react": "15.5.4",
+    "react-apollo": "^1.2.0",
     "react-dom": "15.5.4",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
