--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,17 @@
 {
+  "scripts": {
+    "start": "nodemon ./server.js --exec babel-node -e js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
+    "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
-    "express": "^4.15.2"
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "graphql-server-express": "^0.7.2",
+    "graphql-tools": "^0.11.0",
+    "pg-promise": "^5.7.0"
   }
 }
