--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "graphql-server-express": "^0.7.2",
     "graphql-tools": "^0.11.0",
