--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "nodemon ./server.js --exec babel-node -e js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-db": "node ./database/db_build.js"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
@@ -9,6 +10,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "body-parser": "^1.17.1",
+    "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "graphql-server-express": "^0.7.2",
