--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "graphql": "^0.9.6",
     "graphql-server-express": "^0.7.2",
     "graphql-tools": "^0.11.0",
     "pg-promise": "^5.7.0"
