--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-test-utils": "^0.3.0",
+    "babel-cli": "^6.24.1",
     "graphql-tag": "^2.0.0",
     "graphql-tools": "^0.11.0",
     "react": "15.5.4",
@@ -20,7 +21,7 @@
     "react-scripts": "0.9.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"nodemon ./../server/server.js --exec babel-node -e js\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
