add too much for one commit...
Added nav links to nav, styled components file, add week shifts
component....

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "nodemon ./server.js --exec babel-node -e js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-db": "node ./database/db_build.js"
+    "build-db": "node ./database/dbBuild.js"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
