--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "apollo-test-utils": "^0.3.0",
     "babel-cli": "^6.24.1",
+    "cuid": "^1.3.8",
     "graphql-tag": "^2.0.0",
     "graphql-tools": "^0.11.0",
     "react": "15.5.4",
